# oci-rag-kit

./: .env.template  .gitignore  LICENSE  README.md  pyproject.toml
infra/: .gitignore  Makefile  README.md  core.tf  database.tf  datascience.tf  iam.tf  manual-setup.md  object_storage.tf  oci-manual-setup-guide.md  provider.tf  terraform.tfvars.example  vars.tf
infra/terraform/: README.md  vars.tf
notebooks/: 01_setup_database.ipynb  02_data_pipeline.ipynb  03_rag.ipynb  11_create_table.ipynb  12_data_pipeline.ipynb  12_data_pipeline_v2.ipynb  13_rag.ipynb  13_rag_v2.ipynb  config_loader.py
setup/: environment.yaml  setup.sh
src/: __init__.py
src/config/: __init__.py  config_loader.py
src/data_pipeline/: __init__.py  data_pipeline.py  document_loader.py  document_writer.py  embedding_generator.py  exceptions.py  text_chunker.py  text_extractor.py
src/rag/: __init__.py  answer_generator.py  excel_handler.py  exceptions.py  rag_pipeline.py  ragas_evaluator.py  reranker.py  vector_searcher.py
tests/: __init__.py
tests/e2e/: README.md  __init__.py  conftest.py  test_e2e_pipeline.py  test_e2e_rag_pipeline.py  test_llm_models.py
tests/unit/: __init__.py  test_answer_generator.py  test_config_loader.py  test_data_pipeline.py  test_document_loader.py  test_document_writer.py  test_embedding_generator.py  test_excel_handler.py  test_rag_pipeline.py  test_ragas_evaluator.py  test_reranker.py  test_text_chunker.py  test_text_extractor.py  test_vector_searcher.py
